K8S/platforms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deployment
  labels:
    app: platformservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservicepod
  template:
    metadata:
      labels:  
        app: platformservicepod
    spec:
      containers:
      - name: platformservicecontainer
        image: bahattinaksoy123/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platformservice-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: platformservicepod
  ports:
  - name: platformservicepod
    protocol: TCP
    port: 80
    targetPort: 80
